# 20260520-zava-a2a-demo

./: .gitignore  README.md  demo-status.md  initial_prompt.md  plan.md
.github/: copilot-instructions.md
agent-reports/: live-fix-summary-r1.md  live-test-report.md  test-plan.md
agent-reviews/: .gitkeep  2026-05-20-a2a-protocol-review.md  2026-05-20-a2a-use-cases-review.md  2026-05-20-aks-review.md  2026-05-20-foundry-agents-review.md  2026-05-20-foundry-control-plane-review.md  2026-05-20-foundry-v2-review.md  2026-05-20-langgraph-langchain-review.md  2026-05-20-model-availability-review.md  2026-05-20-plan-reviewer-zava-a2a-demo.md
apps/backend/: pyproject.toml
apps/backend/app/: __init__.py  agent_client.py  artifacts.py  config.py  main.py  models.py
apps/backend/tests/: test_agent_client.py  test_artifacts.py
apps/foundry-agent/: .env.example  __init__.py  create_a2a_connection.py  pyproject.toml  setup_agent.py  system_prompt.md  test_agent.py
apps/frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/frontend/e2e/: agent-conversation.spec.ts
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src/components/: A2ATimeline.tsx  AgentConversation.tsx  ChartDisplay.tsx  ChatPanel.tsx  OrderForm.tsx
apps/frontend/src/hooks/: useChat.ts
apps/frontend/src/styles/: index.css
apps/frontend/src/types/: index.ts
apps/ops-agent/: .dockerignore  Dockerfile  pyproject.toml
apps/ops-agent/app/: __init__.py  __main__.py  agent.py  agent_card.py  config.py  executor.py  feasibility.py  server.py  tools.py
apps/ops-agent/data/: customers.json  inventory.json  order_book.json  production_schedule.json
apps/ops-agent/k8s/: deployment.yaml  ingress.sslip.yaml  ingress.yaml  secret.template.yaml  service.yaml
apps/ops-agent/tests/: test_a2a_server.py  test_agent.py  test_feasibility.py  test_tools.py
docs/: .gitkeep  a2a-foundry-walkthrough.md  a2a-implementation.md  a2a-mutual-discovery.md  architecture.md  deployment-learnings.md  how-to-demo.md  private-vnet-considerations.md  technology.md  use-case.md
infra/: azure.yaml  main.bicep  main.parameters.json
infra/modules/: acr.bicep  aks.bicep  appinsights.bicep  dns.bicep  foundry-appinsights-connection.bicep  foundry-models.bicep  foundry.bicep  identity.bicep  keyvault.bicep
research/: .gitkeep  2026-05-20-a2a-protocol.md  2026-05-20-a2a-use-cases.md  2026-05-20-aks.md  2026-05-20-foundry-agents.md  2026-05-20-foundry-control-plane.md  2026-05-20-foundry-v2.md  2026-05-20-langgraph-langchain.md  2026-05-20-model-availability.md  2026-05-21-foundry-agent-traces.md
scripts/: README.md  build-and-push.ps1  create-a2a-connection.ps1  deploy-all.ps1  deploy-infra.ps1  deploy-k8s.ps1  setup-foundry-agent.ps1  smoke-test.ps1  verify-quota.ps1
