[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zava-foundry-agent"
version = "0.1.0"
description = "Zava Foundry V2 Customer Service Agent setup — provisions the prompt agent, A2A connection, and Code Interpreter tool"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "miguelmsft" }]
dependencies = [
    "azure-ai-projects>=2.1.0",
    "azure-identity>=1.17.0",
    "openai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
# Setup-script collection (Step 11). `__init__.py` exists so the directory
# is importable for tooling, but no library modules are exposed.
py-modules = []
